Clean code before deploy